# trace-it-now

./: .gitignore  CMakeLists.txt  README.md  build.sh
scripts/: build.sh  premake5.lua
src/: Assert.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  Main.cpp  assert.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  main.cpp
src/core/: Camera.cpp  Camera.hpp  Constants.hpp  Ray.hpp  Vec3.cpp  Vec3.hpp  camera.cpp  camera.hpp  constants.hpp  ray.hpp  vec3.cpp  vec3.hpp
src/materials/: Lambertian.cpp  Lambertian.hpp  Material.hpp  Metal.cpp  Metal.hpp
src/objects/: Sphere.cpp  Sphere.hpp  sphere.cpp  sphere.hpp
src/utils/: color.hpp  vec3.cpp  vec3.hpp
